--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,8 @@ pool:
 
 steps:
 - script: npm install
-- script: npm build
+- script: npm run lint
+- script: npm run build
 - script: npm test
 - task: Docker@2
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
