Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,7 @@ steps:
     tags: |
       docker-xvfb:stable
       docker-xvfb:stable-slim
+      docker-xvfb:stretch
+      docker-xvfb:stretch-slim
       docker-xvfb:buster
       docker-xvfb:buster-slim
