--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "build-buster-slim": "docker build ./docker -f ./docker/buster-slim.Dockerfile -t docker-xvfb:buster-slim",
     "lint": "cat **/*.Dockerfile | dockerfilelint",
     "test": "npm run test-stable && npm run test-stable-slim && npm run test-stretch && npm run test-stretch-slim && npm run test-buster && npm run test-buster-slim",
-    "test-stable": "docker build ./examples -f ./examples/stable.Dockerfile -t example-test:stable && docker run -it example-test:stable date",
-    "test-stable-slim": "docker build ./examples -f ./examples/stable-slim.Dockerfile -t example-test:stable-slim && docker run -it example-test:stable-slim date",
-    "test-stretch": "docker build ./examples -f ./examples/stretch.Dockerfile -t example-test:stretch && docker run -it example-test:stretch date",
-    "test-stretch-slim": "docker build ./examples -f ./examples/stretch-slim.Dockerfile -t example-test:stretch-slim && docker run -it example-test:stretch-slim date",
-    "test-buster": "docker build ./examples -f ./examples/buster.Dockerfile -t example-test:buster && docker run -it example-test:buster date",
-    "test-buster-slim": "docker build ./examples -f ./examples/buster-slim.Dockerfile -t example-test:buster-slim && docker run -it example-test:buster-slim date"
+    "test-stable": "docker build ./examples -f ./examples/stable.Dockerfile -t example-test:stable && docker run example-test:stable date",
+    "test-stable-slim": "docker build ./examples -f ./examples/stable-slim.Dockerfile -t example-test:stable-slim && docker run example-test:stable-slim date",
+    "test-stretch": "docker build ./examples -f ./examples/stretch.Dockerfile -t example-test:stretch && docker run example-test:stretch date",
+    "test-stretch-slim": "docker build ./examples -f ./examples/stretch-slim.Dockerfile -t example-test:stretch-slim && docker run example-test:stretch-slim date",
+    "test-buster": "docker build ./examples -f ./examples/buster.Dockerfile -t example-test:buster && docker run example-test:buster date",
+    "test-buster-slim": "docker build ./examples -f ./examples/buster-slim.Dockerfile -t example-test:buster-slim && docker run example-test:buster-slim date"
   },
   "author": "Ben Greenier",
   "license": "MIT",
