dual tag for build

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   },
   "scripts": {
     "build": "npm run build-stable && npm run build-stable-slim && npm run build-stretch && npm run build-stretch-slim && npm run build-buster && npm run build-buster-slim",
-    "build-stable": "docker build ./docker -f ./docker/stable.Dockerfile -t docker-xvfb:stable",
-    "build-stable-slim": "docker build ./docker -f ./docker/stable-slim.Dockerfile -t docker-xvfb:stable-slim",
-    "build-stretch": "docker build ./docker -f ./docker/stretch.Dockerfile -t docker-xvfb:stretch",
-    "build-stretch-slim": "docker build ./docker -f ./docker/stretch-slim.Dockerfile -t docker-xvfb:stretch-slim",
-    "build-buster": "docker build ./docker -f ./docker/buster.Dockerfile -t docker-xvfb:buster",
-    "build-buster-slim": "docker build ./docker -f ./docker/buster-slim.Dockerfile -t docker-xvfb:buster-slim",
+    "build-stable": "docker build ./docker -f ./docker/stable.Dockerfile -t docker-xvfb:stable -t bengreenier/docker-xvfb:stable",
+    "build-stable-slim": "docker build ./docker -f ./docker/stable-slim.Dockerfile -t docker-xvfb:stable-slim -t bengreenier/docker-xvfb:stable-slim",
+    "build-stretch": "docker build ./docker -f ./docker/stretch.Dockerfile -t docker-xvfb:stretch -t bengreenier/docker-xvfb:stretch",
+    "build-stretch-slim": "docker build ./docker -f ./docker/stretch-slim.Dockerfile -t docker-xvfb:stretch-slim  -t bengreenier/docker-xvfb:stretch-slim",
+    "build-buster": "docker build ./docker -f ./docker/buster.Dockerfile -t docker-xvfb:buster -t bengreenier/docker-xvfb:buster",
+    "build-buster-slim": "docker build ./docker -f ./docker/buster-slim.Dockerfile -t docker-xvfb:buster-slim -t bengreenier/docker-xvfb:buster-slim",
     "lint": "cat **/*.Dockerfile | dockerfilelint",
     "test": "npm run test-stable && npm run test-stable-slim && npm run test-stretch && npm run test-stretch-slim && npm run test-buster && npm run test-buster-slim",
     "test-stable": "docker build ./examples -f ./examples/stable.Dockerfile -t example-test:stable && docker run example-test:stable date",
