--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ steps:
 - script: npm run build
 - script: npm test
 - task: Docker@2
-  # condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
   inputs:
     containerRegistry: 'bengreenier - dockerhub'
     repository: 'bengreenier/docker-xvfb'
