--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "example": "examples"
   },
   "scripts": {
-    "build": "npm run build-stable && npm run build-stable-slim && npm run build-stretch && npm run build-stretch-slim && npm run build-buster && npm run build-buster-slim",
+    "build": "npm run build-stable && npm run build-stable-slim && npm run build-stretch && npm run build-stretch-slim && npm run build-jessie && npm run build-jessie-slim && npm run build-buster && npm run build-buster-slim",
     "build-stable": "docker build ./docker -f ./docker/stable.Dockerfile -t docker-xvfb:stable -t bengreenier/docker-xvfb:stable",
     "build-stable-slim": "docker build ./docker -f ./docker/stable-slim.Dockerfile -t docker-xvfb:stable-slim -t bengreenier/docker-xvfb:stable-slim",
+    "build-jessie": "docker build ./docker -f ./docker/jessie.Dockerfile -t docker-xvfb:jessie -t bengreenier/docker-xvfb:jessie",
+    "build-jessie-slim": "docker build ./docker -f ./docker/jessie-slim.Dockerfile -t docker-xvfb:jessie-slim -t bengreenier/docker-xvfb:jessie-slim",
     "build-stretch": "docker build ./docker -f ./docker/stretch.Dockerfile -t docker-xvfb:stretch -t bengreenier/docker-xvfb:stretch",
-    "build-stretch-slim": "docker build ./docker -f ./docker/stretch-slim.Dockerfile -t docker-xvfb:stretch-slim  -t bengreenier/docker-xvfb:stretch-slim",
+    "build-stretch-slim": "docker build ./docker -f ./docker/stretch-slim.Dockerfile -t docker-xvfb:stretch-slim -t bengreenier/docker-xvfb:stretch-slim",
     "build-buster": "docker build ./docker -f ./docker/buster.Dockerfile -t docker-xvfb:buster -t bengreenier/docker-xvfb:buster",
     "build-buster-slim": "docker build ./docker -f ./docker/buster-slim.Dockerfile -t docker-xvfb:buster-slim -t bengreenier/docker-xvfb:buster-slim",
     "lint": "cat **/*.Dockerfile | dockerfilelint",
-    "test": "npm run test-stable && npm run test-stable-slim && npm run test-stretch && npm run test-stretch-slim && npm run test-buster && npm run test-buster-slim",
+    "test": "npm run test-stable && npm run test-stable-slim && npm run test-stretch && npm run test-stretch-slim && npm run test-jessie && npm run test-jessie-slim && npm run test-buster && npm run test-buster-slim",
     "test-stable": "docker build ./examples -f ./examples/stable.Dockerfile -t example-test:stable && docker run example-test:stable date",
     "test-stable-slim": "docker build ./examples -f ./examples/stable-slim.Dockerfile -t example-test:stable-slim && docker run example-test:stable-slim date",
+    "test-jessie": "docker build ./examples -f ./examples/jessie.Dockerfile -t example-test:jessie && docker run example-test:jessie date",
+    "test-jessie-slim": "docker build ./examples -f ./examples/jessie-slim.Dockerfile -t example-test:jessie-slim && docker run example-test:jessie-slim date",
     "test-stretch": "docker build ./examples -f ./examples/stretch.Dockerfile -t example-test:stretch && docker run example-test:stretch date",
     "test-stretch-slim": "docker build ./examples -f ./examples/stretch-slim.Dockerfile -t example-test:stretch-slim && docker run example-test:stretch-slim date",
     "test-buster": "docker build ./examples -f ./examples/buster.Dockerfile -t example-test:buster && docker run example-test:buster date",
